[package]
name = "msgpack-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "msgpack"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "wrap_help"] }
hex = "0.4.3"
rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde-transcode = "1.1.1"
serde_json = "1.0.91"
