[package]
name = "msgpack-cli"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pluots/msgpack-cli"
description = "A command line utility that converts between JSON and MessagePack"
keywords = ["cli", "msgpack"]
categories = ["command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
strip = "symbols"
lto = "fat"

[[bin]]
name = "msgpack"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive", "wrap_help"] }
hex = "0.4.3"
rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde-transcode = "1.1.1"
serde_json = "1.0.91"

[build-dependencies]
clap = { version = "4.0.32", features = ["derive", "wrap_help"] }
clap_complete = "4.0.7"
clap_mangen = "0.2.6"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.5"
tempfile = "3.3.0"
