[package]
name = "msgpack-cli"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pluots/mpk-cli"
description = "A command line utility that converts between JSON and MessagePack"
keywords = ["cli", "msgpack", "mpk", "messagepack"]
categories = ["command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
strip = "symbols"
lto = "fat"

[[bin]]
name = "mpk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.2", features = ["derive", "wrap_help"] }
hex = "0.4.3"
rmp-serde = "1.1.1"
serde = { version = "1.0.160", features = ["derive"] }
serde-transcode = "1.1.1"
serde_json = "1.0.96"

[build-dependencies]
clap = { version = "4.2.1", features = ["derive", "wrap_help"] }
clap_complete = "4.2.0"
clap_mangen = "0.2.10"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
tempfile = "3.5.0"
